--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.0.1",
     "@umijs/max": "^4.0.55",
-    "antd": "^5.0.0"
+    "antd": "^5.0.0",
+    "js-cookie": "^3.0.1",
+    "jsencrypt": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
