--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@umijs/max": "^4.0.55",
     "antd": "^5.0.0",
     "js-cookie": "^3.0.1",
-    "jsencrypt": "^3.3.2"
+    "jsencrypt": "^3.3.2",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
