--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "author": "",
   "scripts": {
     "build": "max build",
-    "build:dev": "cross-env env=dev max build",
-    "build:daily": "cross-env env=daily max build",
-    "build:gray": "cross-env env=gray max build",
+    "build:dev": "max build",
+    "build:daily": "max build",
+    "build:gray": "max build",
     "dev": "max dev",
     "format": "prettier --cache --write .",
     "postinstall": "max setup",
@@ -28,7 +28,6 @@
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "cross-env": "^7.0.3",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
