--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.0.0",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.3.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1"
