--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "designer-mid-end",
   "private": true,
   "author": "",
   "scripts": {
@@ -8,33 +9,48 @@
     "build:gray": "npm run build",
     "dev": "max dev",
     "format": "prettier --cache --write .",
-    "postinstall": "max setup",
+    "postinstall": "node ./scripts/postinstall",
     "prepare": "husky install",
     "setup": "max setup",
     "start": "npm run dev"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.0.1",
+    "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-components": "^2.0.1",
-    "@umijs/max": "^4.0.55",
-    "antd": "^5.0.0",
+    "@ant-design/pro-table": "^3.5.2",
+    "@umijs/max": "^4.0.52",
+    "@xc/react-hooks": "^1.0.3",
+    "@xc/web-cmpt": "^1.0.18",
+    "@xc/web-utils": "~1.0.13",
+    "@xlion/component": "^0.2.0",
+    "@xlion/utils": "^0.3.3",
+    "ahooks": "^3.7.5",
+    "antd": "^4.24.8",
+    "html2canvas": "~1.1.5",
+    "js-base64": "^3.7.3",
     "js-cookie": "^3.0.1",
-    "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "react-cookie": "^4.1.1",
-    "react-cookies": "^0.1.1",
-    "shelljs": "^0.8.5"
+    "lodash-es": "^4.17.21",
+    "query-string": "^8.1.0",
+    "react-mentions": "^4.4.7",
+    "react-sortable-hoc": "^2.0.0",
+    "shelljs": "^0.8.5",
+    "swiper": "^6.6.1",
+    "umi-request": "^1.4.0"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "prettier-plugin-organize-imports": "^2",
-    "prettier-plugin-packagejson": "^2",
-    "typescript": "^4.1.2"
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "cross-env": "^7.0.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-packagejson": "^2.4.3",
+    "stylelint-order": "^6.0.2",
+    "typescript": "^4.9.5"
   }
 }
