feat: 联调的差不多了

--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@ant-design/pro-components": "^2.0.1",
-    "@ant-design/pro-table": "^3.5.2",
-    "@umijs/max": "^4.0.52",
+    "@ant-design/icons": "4.7.0",
+    "@ant-design/pro-components": "2.0.1",
+    "@ant-design/pro-table": "3.5.2",
+    "@umijs/max": "4.0.52",
     "@xc/react-hooks": "^1.0.3",
     "@xc/web-cmpt": "^1.0.18",
     "@xc/web-utils": "~1.0.13",
     "@xlion/component": "^0.2.0",
     "@xlion/utils": "^0.3.3",
-    "ahooks": "^3.7.5",
-    "antd": "^4.24.8",
+    "ahooks": "3.7.5",
+    "antd": "4.24.8",
     "html2canvas": "~1.1.5",
     "js-base64": "^3.7.3",
     "js-cookie": "^3.0.1",
