--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "umi-request": "^1.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "cross-env": "^7.0.3",
