--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/pro-components": "^2.0.1",
+    "@ant-design/pro-components": "2.4.5",
+    "@ant-design/pro-layout": "7.11.0",
     "@fingerprintjs/fingerprintjs": "^3.4.1",
     "@umijs/max": "^4.0.52",
     "@xc/react-hooks": "^1.0.3",
@@ -26,11 +27,17 @@
     "@xlion/utils": "^0.5.0",
     "ahooks": "^3.7.5",
     "antd": "^5.3.2",
+    "classnames": "^2.3.2",
+    "dayjs": "^1.11.8",
     "html2canvas": "~1.1.5",
     "js-base64": "^3.7.3",
     "js-cookie": "^3.0.1",
+    "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "moment": "^2.29.4",
+    "pro-components=2.3.5": "link:@ant-design/pro-components=2.3.5",
+    "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
     "react-mentions": "^4.4.7",
     "react-sortable-hoc": "^2.0.0",
