--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@xc/web-cmpt": "^1.0.18",
     "@xc/web-utils": "~1.0.13",
     "@xlion/component": "^0.2.0",
+    "@xlion/monitor": "0.0.41-beta",
     "@xlion/utils": "^0.5.0",
     "ahooks": "^3.7.5",
     "antd": "^5.3.2",
