--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-components": "2.4.5",
     "@ant-design/pro-layout": "7.11.0",
+    "@types/lodash": "^4.14.195",
     "@umijs/max": "^4.0.52",
     "@xc/kunlun-request": "^0.0.6",
     "@xc/react-hooks": "^1.0.3",
@@ -34,6 +35,7 @@
     "js-base64": "^3.7.3",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.3.2",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
