--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@ant-design/pro-layout": "7.11.0",
     "@types/lodash": "^4.14.195",
     "@umijs/max": "^4.0.52",
-    "@xc/kunlun-request": "^1.5.5",
+    "@xc/kunlun-request": "^1.5.7",
     "@xc/react-hooks": "^1.0.3",
     "@xc/web-cmpt": "^1.0.18",
     "@xc/web-utils": "~1.0.13",
@@ -29,8 +29,10 @@
     "@xlion/utils": "^0.5.0",
     "ahooks": "^3.7.5",
     "antd": "^5.3.2",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.8",
+    "fingerprintjs2": "^2.1.4",
     "html2canvas": "~1.1.5",
     "js-base64": "^3.7.3",
     "js-cookie": "^3.0.1",
