--- a/package.json
+++ b/package.json
@@ -31,20 +31,15 @@
     "antd": "^5.3.2",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.8",
-    "html2canvas": "~1.1.5",
-    "js-base64": "^3.7.3",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
-    "query-string": "^8.1.0",
     "react-mentions": "^4.4.7",
     "react-sortable-hoc": "^2.0.0",
-    "shelljs": "^0.8.5",
-    "swiper": "^6.6.1",
-    "umi-request": "^1.4.0"
+    "shelljs": "^0.8.5"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.7",
