--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@xc/react-hooks": "^1.0.3",
     "@xc/web-cmpt": "^1.0.18",
     "@xc/web-utils": "~1.0.13",
-    "@xlion/component": "^1.5.1",
+    "@xlion/component": "^1.6.3",
+    "@xlion/icons": "^0.1.0",
     "@xlion/monitor": "0.0.41-beta",
     "@xlion/utils": "^0.5.0",
     "ahooks": "^3.7.5",
