--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "antd": "^5.3.2",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.8",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.3.2",
     "lodash-es": "^4.17.21",
