--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.8",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
+    "echarts-gl": "^2.0.9",
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "prop-types": "^15.8.1",
