--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "prop-types": "^15.8.1",
+    "province-city-china": "^8.5.7",
     "shelljs": "^0.8.5",
     "umi-request": "^1.4.0"
   },
