--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash-es": "^4.17.21",
     "prop-types": "^15.8.1",
     "province-city-china": "^8.5.7",
+    "react-icons": "^5.0.1",
     "shelljs": "^0.8.5",
     "umi-request": "^1.4.0"
   },
