--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-components": "2.4.5",
     "@ant-design/pro-layout": "7.11.0",
+    "@emotion/css": "^11.11.2",
     "@types/lodash": "^4.14.195",
     "@umijs/max": "^4.0.52",
     "ahooks": "^3.7.5",
@@ -28,6 +29,7 @@
     "echarts": "^5.3.3",
     "echarts-for-react": "^3.0.2",
     "echarts-gl": "^2.0.9",
+    "emotion": "^11.0.0",
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "prop-types": "^15.8.1",
