--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@@/*": ["src/.umi/*"]
-    },
-    
-  }
+    }
+  },
+  "include": ["./src/**/*", "./typings.d.ts"]
 }
